; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_kvm.c_mmu_queue_flush.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_kvm.c_mmu_queue_flush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvm_para_state = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.kvm_para_state*)* @mmu_queue_flush to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mmu_queue_flush(%struct.kvm_para_state* %0) #0 {
  %2 = alloca %struct.kvm_para_state*, align 8
  store %struct.kvm_para_state* %0, %struct.kvm_para_state** %2, align 8
  %3 = load %struct.kvm_para_state*, %struct.kvm_para_state** %2, align 8
  %4 = getelementptr inbounds %struct.kvm_para_state, %struct.kvm_para_state* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %17

7:                                                ; preds = %1
  %8 = load %struct.kvm_para_state*, %struct.kvm_para_state** %2, align 8
  %9 = getelementptr inbounds %struct.kvm_para_state, %struct.kvm_para_state* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 8
  %11 = load %struct.kvm_para_state*, %struct.kvm_para_state** %2, align 8
  %12 = getelementptr inbounds %struct.kvm_para_state, %struct.kvm_para_state* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = call i32 @kvm_mmu_op(i32 %10, i64 %13)
  %15 = load %struct.kvm_para_state*, %struct.kvm_para_state** %2, align 8
  %16 = getelementptr inbounds %struct.kvm_para_state, %struct.kvm_para_state* %15, i32 0, i32 0
  store i64 0, i64* %16, align 8
  br label %17

17:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @kvm_mmu_op(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
